--- a/will_victoria_sabrina/makefile
+++ b/will_victoria_sabrina/makefile
@@ -1,8 +1,2 @@
-map: map.c map.h
-	gcc map.c -framework SDL2
-
-hello: helloworld.c
-	gcc helloworld.c -framework SDL2
-
-
-
+ui: ui.c ui.h
+	gcc ui.c -framework SDL2
