Moved SQL to compose, Added more to database
-Compose makes the SQL statements for us
-Moved server_protocols to be in both server and client dirs
-Edited server-side makefile a bit to compile compose
-Added more skeleton to client side

--- a/Aaron_Jack_Sweyn/server/makefile
+++ b/Aaron_Jack_Sweyn/server/makefile
@@ -1,2 +1,12 @@
-all:
-	gcc -lsqlite3 database.c
+database: compose.o
+	gcc -lsqlite3 compose.o database.c
+
+compose.o: compose.c compose.h
+	gcc -c compose.c
+
+
+
+clean:
+	rm *.o
+	rm *.db
+	rm a.out
