Worked on server/client connection
Made a few more options for communication between server and client
Added getting game_info from database for key, etc...

--- a/Aaron_Jack_Sweyn/server/makefile
+++ b/Aaron_Jack_Sweyn/server/makefile
@@ -1,12 +1,14 @@
-database: compose.o
-	gcc -lsqlite3 compose.o database.c
-
+server: database.o compose.o
+	gcc -llibssl -llibcrypto -lsqlite3 database.o compose.o server_side.c
+database.o:
+	gcc -c database.c
 compose.o: compose.c compose.h
 	gcc -c compose.c
-
-
-
 clean:
 	rm *.o
 	rm *.db
 	rm a.out
+
+
+database: compose.o
+	gcc -lsqlite3 compose.o database.c
