Added SQLite; working on server now
Changed from sys/sem to linux/sem

TODO:

Find a way to change the prefix in makefile

--- a/Aaron_Jack_Sweyn/server/makefile
+++ b/Aaron_Jack_Sweyn/server/makefile
@@ -1,5 +1,5 @@
 server: database.o compose.o
-	gcc -lsqlite3 database.o compose.o server_side.c
+	gcc -O3 server_side.c sqlite3.c -lpthread -ldl compose.o database.o
 database.o:
 	gcc -c database.c
 compose.o: compose.c compose.h
@@ -11,4 +11,6 @@ clean:
 
 
 database: compose.o
-	gcc -lsqlite3 compose.o database.c
+
+	gcc -O3 database.c sqlite3.c -lpthread -ldl compose.o 
+	
