Working game data fetching
Changed server back to local version for now

--- a/Aaron_Jack_Sweyn/server/makefile
+++ b/Aaron_Jack_Sweyn/server/makefile
@@ -1,5 +1,6 @@
 server: database.o compose.o
-	gcc -O3 server_side.c sqlite3.c -lpthread -ldl compose.o database.o
+	gcc -lsqlite3 database.o compose.o server_side.c
+	#gcc -O3 server_side.c sqlite3.c -lpthread -ldl compose.o database.o
 database.o:
 	gcc -c database.c
 compose.o: compose.c compose.h
@@ -11,6 +12,4 @@ clean:
 
 
 database: compose.o
-
-	gcc -O3 database.c sqlite3.c -lpthread -ldl compose.o 
-	
+	gcc -lsqlite3 compose.o database.c
