Combined the game with the server/client

--- a/Aaron_Jack_Sweyn/client/makefile
+++ b/Aaron_Jack_Sweyn/client/makefile
@@ -1,12 +1,12 @@
 all:
 	-mkdir ~/.rxc &> /dev/null
 	make main
-main: client.o game.o
-	gcc game.o client_side.o main.c -o rxc 
+main: client.o helicopter.o
+	gcc helicopter.o client_side.o main.c -o rxc -lncurses
 client.o: client_side.c client_side.h
 	gcc -c client_side.c
-game.o:	game.c game.h
-	gcc -c game.c
+helicopter.o:	helicopter.c helicopter.h
+	gcc -c helicopter.c
 clean:
 	-rm *.o
 	-rm a.out
