--- a/Arfan_Timothy/MAKEFILE
+++ b/Arfan_Timothy/MAKEFILE
@@ -1,8 +1,8 @@
-main: main.o utils.o poker.o game.o hand.o exchange.o player.o montecarlo.o deck.o card.o test.o
-	gcc -o main main.o utils.o poker.o game.o hand.o exchange.o player.o montecarlo.o deck.o card.o test.o
+main: main.o utils.o poker.o game.o  hand.o exchange.o player.o montecarlo.o deck.o  card.o test.o
+	gcc -o main main.o utils.o poker.o game.o  hand.o exchange.o player.o montecarlo.o deck.o  card.o test.o
 
 main.o: main.c poker.h test.h
-	gcc -c main.c
+	gcc -c main.c 
 
 test.o: test.c test.h
 	gcc -c test.c
@@ -26,13 +26,13 @@ exchange.o: exchange.c exchange.h
 	gcc -c exchange.c
 
 montecarlo.o: montecarlo.c montecarlo.h
-	gcc -c montecarlo.c
+	gcc -c montecarlo.c        
 
 player.o: player.c player.h
-	gcc -c player.h
+	gcc -c player.c
 
 game.o: game.c game.h
 	gcc -c game.c
 
-clean: 
+clean:
 	\rm -f *.o main *~
