--- a/Steve_Roger/Makefile
+++ b/Steve_Roger/Makefile
@@ -1,3 +1,8 @@
-a.out: game.c header.h
-	gcc header.h
-	gcc game.c -o game
+main: game.c header.h util.o
+	gcc -Wall -o game game.c util.o
+
+util.o: util.h util.c
+	gcc -Wall -c util.c
+
+run: main
+	./game
