--- a/Peter_Lucido_Anthony_Chernyak_Tyrone_Ye/makefile
+++ b/Peter_Lucido_Anthony_Chernyak_Tyrone_Ye/makefile
@@ -1,7 +1,14 @@
-main: Engine Clean
+main: Servers Play Clean
+
+Servers: DRMserver.c SaveServer.c
+	gcc DRMserver.c - Verify
+	gcc SaveServer.c - ToSave
+
+Play: DRM.c Engine
+	gcc DRM.c
 
 Engine: Engine.c Headers
-	gcc Engine.c -o Play
+	gcc Engine.c -o execute
 Headers: headers.h
 	gcc headers.h
 Clean:
