--- a/Alvin_Cindy_Nancy/makefile
+++ b/Alvin_Cindy_Nancy/makefile
@@ -1,7 +1,10 @@
-main: 
-	server.o
+main: server.o client.o 
 clean:
 	rm *~
 	rm *#
+	rm server
+	rm client
 server.o: server.h server.c
-	gcc -c server.c server.h
+	gcc -o server server.c
+client.o: client.h client.c
+	gcc -o client client.c
