Final Project 999999.99999% done

--- a/Peter_Lucido_Anthony_Chernyak_Tyrone_Ye/makefile
+++ b/Peter_Lucido_Anthony_Chernyak_Tyrone_Ye/makefile
@@ -1,8 +1,8 @@
 main: Servers Play Clean
 
-Servers: DRMserver.c SaveServer.c
-	gcc DRMserver.c -c Verify
-	gcc SaveServer.c -c ToSave
+Servers: DRMserver.c Saveserver.c
+	gcc DRMserver.c -o Verify
+	gcc Saveserver.c -o ToSave
 
 Play: DRM.c Engine
 	gcc DRM.c
