--- a/Alvin_Cindy_Nancy/makefile
+++ b/Alvin_Cindy_Nancy/makefile
@@ -7,7 +7,7 @@ client.o: client.h client.c
 	gcc -o client client.c
 
 gui.o: gui.c gui.h maze.o
-	
+	gcc -o gui.c maze.o -lSDL	
 
 maze.o: maze.h maze.c
 	gcc -c maze.c
