--- a/Alvin_Cindy_Nancy/makefile
+++ b/Alvin_Cindy_Nancy/makefile
@@ -1,10 +1,11 @@
-main: server.o client.o 
+main: server.o client.o maze.o
+
 clean:
 	rm server
 	rm client
 	rm *~
 	rm *#
-server.o: server.h server.c
-	gcc -o server server.c
+server.o: server.h
+	gcc -o server server.c maze.c
 client.o: client.h client.c
 	gcc -o client client.c
