--- a/Aaron_Jack_Sweyn/server/makefile
+++ b/Aaron_Jack_Sweyn/server/makefile
@@ -1,6 +1,6 @@
 server: database.o compose.o
-	gcc -lsqlite3 database.o compose.o -o server server_side.c
-	#gcc -O3 server_side.c sqlite3.c -lpthread -ldl compose.o database.o
+	#gcc -lsqlite3 database.o compose.o -o server server_side.c
+	gcc -O3 server_side.c sqlite3.c -lpthread -ldl compose.o database.o
 database.o:
 	gcc -c database.c
 compose.o: compose.c compose.h
