--- a/will_victoria_sabrina/makefile
+++ b/will_victoria_sabrina/makefile
@@ -1,11 +1,8 @@
+build: server game
+
 # Remember to switch build to the top once networking works
 game: ui.c ui.h model.c model.h map.c map.h logic.c logic.h
-	gcc ui.c model.c map.c logic.c -lSDL2 -lSDL2_ttf -lm -o RISK
+	gcc client.c ui.c model.c map.c logic.c -lSDL2 -lSDL2_ttf -lm -o RISK
 
-build:  game server client
-
-server: forkingserver.c
-	gcc forkingserver.c
-
-client: client.c
-	gcc client.c
+server: forkingserver.c logic.c map.c
+	gcc logic.c map.c forkingserver.c -o server
