--- a/will_victoria_sabrina/makefile
+++ b/will_victoria_sabrina/makefile
@@ -2,7 +2,7 @@ build: server game
 
 # Remember to switch build to the top once networking works
 game: ui.c ui.h model.c model.h map.c map.h logic.c logic.h
-	gcc client.c ui.c model.c map.c logic.c -lSDL2 -lSDL2_ttf -lm -o RISK
+	gcc client.c ui.c model.c map.c logic.c -lSDL2 -lSDL2_ttf -lm -lbsd -o RISK
 
 server: forkingserver.c logic.c map.c
 	gcc logic.c map.c forkingserver.c -o server
